--- a/index.html
+++ b/index.html
@@ -2,9 +2,10 @@
 <html lang="es">
   <head>
     <title>Document</title>
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <h2 style="color: blue">AppDeGatos</h2>
+    <h2>AppDeGatos</h2>
     <main>
       <h3>Imagenes de gatos</h3>
       <!-- TODO: Agregar enlace a imagenes de gatos -->
