Selectores de clase

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
       <div>
         <p>Cosas que los gatos <em>aman:</em></p>
-        <ul>
+        <ul class="lista-de-gatos">
           <li>Menta gatuna</li>
           <li>Apuntadores laser</li>
           <li><s>Lasaña</s></li>
@@ -45,7 +45,7 @@
         />
 
         <p>Cosas que los gatos <strong>odian:</strong></p>
-        <ol>
+        <ol class="lista-de-gatos">
           <li>Tratamiento antipulgas</li>
           <li>Truenos</li>
           <li>Otros gatos</li>
