--- a/index.html
+++ b/index.html
@@ -35,8 +35,10 @@
         href="https://www.freecodecamp.org/espanol/"
         target="blank"
         rel="noopener noreferrer"
-        ><img
+      >
+        <img
           src="img/ab74aa95-3656-424c-8ca1-dce590aabb97_16-9-discover-aspect-ratio_default_0.jpg"
+          class="imagen-de-gato"
           alt="Un lindo gatito"
           width="400"
       /></a>
@@ -64,6 +66,7 @@
         </ol>
         <img
           src="https://imagenes.diariodenavarra.es/files/image_645_359/uploads/2021/02/18/60ae5c9db9f42.jpeg"
+          class="imagen-de-gato"
           alt="Gato asustado"
           width="600"
         />
