Color de fondo a un div

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
       <hr />
       <h3>Listas de gatos</h3>
 
-      <div>
+      <div class="contenedor-listas">
         <p>Cosas que los gatos <em>aman:</em></p>
         <ul>
           <li>Menta gatuna</li>
@@ -65,13 +65,14 @@
           <li>Truenos</li>
           <li>Otros gatos</li>
         </ol>
-        <img
-          src="https://imagenes.diariodenavarra.es/files/image_645_359/uploads/2021/02/18/60ae5c9db9f42.jpeg"
-          class="imagen-de-gato"
-          alt="Gato asustado"
-          width="600"
-        />
       </div>
+
+      <img
+        src="https://imagenes.diariodenavarra.es/files/image_645_359/uploads/2021/02/18/60ae5c9db9f42.jpeg"
+        class="imagen-de-gato"
+        alt="Gato asustado"
+        width="400"
+      />
 
       <form action="/enviar-respuesta">
         <!--botones de radio-->
