--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     />
   </head>
   <body>
-    <h2>AppDeGatos</h2>
+    <h2 id="titulo-principal">AppDeGatos</h2>
     <main>
       <h3>Imagenes de gatos</h3>
       <!-- TODO: Agregar enlace a imagenes de gatos -->
@@ -47,7 +47,7 @@
 
       <div class="contenedor-listas">
         <p>Cosas que los gatos <em>aman:</em></p>
-        <ul>
+        <ul id="lista-gatos-aman">
           <li>Menta gatuna</li>
           <li>Apuntadores laser</li>
           <li><s>Lasaña</s></li>
@@ -60,7 +60,7 @@
         />
 
         <p>Cosas que los gatos <strong>odian:</strong></p>
-        <ol>
+        <ol id="lista-gatos-odian">
           <li>Tratamiento antipulgas</li>
           <li>Truenos</li>
           <li>Otros gatos</li>
@@ -69,7 +69,7 @@
 
       <img
         src="https://imagenes.diariodenavarra.es/files/image_645_359/uploads/2021/02/18/60ae5c9db9f42.jpeg"
-        class="imagen-de-gato"
+        id="imagen-de-gatos"
         alt="Gato asustado"
         width="400"
       />
