--- a/index.html
+++ b/index.html
@@ -65,14 +65,14 @@
           <li>Truenos</li>
           <li>Otros gatos</li>
         </ol>
+        <img
+          src="https://imagenes.diariodenavarra.es/files/image_645_359/uploads/2021/02/18/60ae5c9db9f42.jpeg"
+          id="imagen-de-gatos"
+          class="Redimensionar"
+          alt="Gato asustado"
+          width="400"
+        />
       </div>
-
-      <img
-        src="https://imagenes.diariodenavarra.es/files/image_645_359/uploads/2021/02/18/60ae5c9db9f42.jpeg"
-        id="imagen-de-gatos"
-        alt="Gato asustado"
-        width="400"
-      />
 
       <form action="/enviar-respuesta">
         <!--botones de radio-->
