prioridad de class vs id

--- a/unidades.html
+++ b/unidades.html
@@ -5,8 +5,11 @@
     <link rel="stylesheet" href="unidades.css" />
   </head>
   <body>
-    <h1 class="texto-azul texto-morado">Hola mundo</h1>
-    <a class="sin-subrrayado" href="https://www.freecodecamp.org/espanol/"
+    <h1>Hola mundo</h1>
+    <a
+      id="enlace-principal"
+      class="sin-subrrayado"
+      href="https://www.freecodecamp.org/espanol/"
       >Haz click aqui</a
     >
   </body>
