Valores RGB para colores

--- a/unidades.html
+++ b/unidades.html
@@ -5,12 +5,7 @@
     <link rel="stylesheet" href="unidades.css" />
   </head>
   <body>
-    <h1>Hola mundo</h1>
-    <a
-      id="enlace-principal"
-      class="sin-subrrayado"
-      href="https://www.freecodecamp.org/espanol/"
-      >Haz click aqui</a
-    >
+    <h1 id="titulo" style="color: purple" class="texto-azul">Hola mundo</h1>
+    <a href="https://www.freecodecamp.org/espanol/">Haz click aqui</a>
   </body>
 </html>
